--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -440,6 +440,10 @@
     <LightSwitchModel Include="DataSources\BanHangData\NhomNhaCungCap.lsml">
       <DependentUpon>Nhóm_Đối_Tượng.lsml</DependentUpon>
     </LightSwitchModel>
+    <LightSwitchModel Include="DataSources\BanHangData\Bàn.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\Khu_Vực.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\Món.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\Nhóm_Món.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
