Revert "Chọn món add"
This reverts commit bf2c7d1fd5e7677a2e425c9488c89497dc094b78.

--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -442,7 +442,7 @@
     </LightSwitchModel>
     <LightSwitchModel Include="DataSources\BanHangData\Bàn.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\Khu_Vực.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangData\Mon.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\Món.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\Nhóm_Món.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\ChonMon.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\ChonMonChiTiet.lsml" />
