--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -440,12 +440,12 @@
     <LightSwitchModel Include="DataSources\BanHangData\NhomNhaCungCap.lsml">
       <DependentUpon>Nhóm_Đối_Tượng.lsml</DependentUpon>
     </LightSwitchModel>
-    <LightSwitchModel Include="DataSources\BanHangData\Bàn.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\Ban.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\Khu_Vực.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\Mon.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\Nhóm_Món.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangData\ChonMon.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangData\ChonMonChiTiet.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\ChonMons.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\ChonMonChiTiets.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
