--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -446,6 +446,10 @@
     <LightSwitchModel Include="DataSources\BanHangData\NhomMon.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\ChonMons.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData\ChonMonChiTiets.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\ChiCongNos.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\ChiCongNoChiTiets.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\ThuCongNos.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData\ThuCongNoChiTiets.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
