Lời lỗ từng sản phẩm

--- a/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
+++ b/BANHANG/BANHANG.DesktopClient/BANHANG.DesktopClient.vbproj
@@ -395,8 +395,14 @@
     <Compile Include="Screens\vLoiLoAllKhachHangReportPreviewScreen.lsml.vb">
       <DependentUpon>vLoiLoAllKhachHangReportPreviewScreen.lsml</DependentUpon>
     </Compile>
+    <Compile Include="Screens\vLoiLoSanPhamReportPreviewScreen.lsml.vb">
+      <DependentUpon>vLoiLoSanPhamReportPreviewScreen.lsml</DependentUpon>
+    </Compile>
     <Compile Include="Screens\vLời_Lỗ_Ngày_Theo_Khách_HàngSearch.lsml.vb">
       <DependentUpon>vLời_Lỗ_Ngày_Theo_Khách_HàngSearch.lsml</DependentUpon>
+    </Compile>
+    <Compile Include="Screens\vLời_Lỗ_Ngày_Theo_Sản_PhẩmSearch.lsml.vb">
+      <DependentUpon>vLời_Lỗ_Ngày_Theo_Sản_PhẩmSearch.lsml</DependentUpon>
     </Compile>
     <Compile Include="Screens\vTheKhoReportPreviewScreen.lsml.vb">
       <DependentUpon>vTheKhoReportPreviewScreen.lsml</DependentUpon>
@@ -505,6 +511,7 @@
     <LightSwitchModel Include="Screens\vDoanhThuAllSanPhamReportPreviewScreen.lsml" />
     <LightSwitchModel Include="Screens\vDoanhThuSanPhamReportPreviewScreen.lsml" />
     <LightSwitchModel Include="Screens\vLoiLoAllKhachHangReportPreviewScreen.lsml" />
+    <LightSwitchModel Include="Screens\vLoiLoSanPhamReportPreviewScreen.lsml" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\report.jpg" />
