--- a/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
+++ b/BANHANG/BANHANG.Server/BANHANG.Server.vbproj
@@ -274,11 +274,17 @@
     <Compile Include="DataSources\BanHangData\Chi.lsml.vb">
       <DependentUpon>Chis.lsml</DependentUpon>
     </Compile>
+    <Compile Include="DataSources\BanHangData\ChiCongNo.lsml.vb">
+      <DependentUpon>ChiCongNos.lsml</DependentUpon>
+    </Compile>
     <Compile Include="DataSources\BanHangData\NhapSanPham.lsml.vb">
       <DependentUpon>Nhập_Sản_Phẩm.lsml</DependentUpon>
     </Compile>
     <Compile Include="DataSources\BanHangData\NhapSanPhamChiTiet.lsml.vb">
       <DependentUpon>Nhập_Sản_Phẩm_Chi_Tiết.lsml</DependentUpon>
+    </Compile>
+    <Compile Include="DataSources\BanHangData\ThuCongNo.lsml.vb">
+      <DependentUpon>ThuCongNos.lsml</DependentUpon>
     </Compile>
     <Compile Include="DataSources\BanHangData\XuatSanPham.lsml.vb">
       <DependentUpon>Xuất_Sản_Phẩm.lsml</DependentUpon>
@@ -463,7 +469,7 @@
     <LightSwitchModel Include="DataSources\BanHangData1\Nhập_Sản_Phẩm_Đầu_Kỳ_Chi_Tiết.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData1\Sản_Phẩm.lsml" />
     <LightSwitchModel Include="DataSources\BanHangData1\Thu_Công_Nợ_Đầu_Kỳ.lsml" />
-    <LightSwitchModel Include="DataSources\BanHangData1\Tiền_Mặt_Đầu_Kỳ.lsml" />
+    <LightSwitchModel Include="DataSources\BanHangData1\Tiền_Mặt_Đầu_Kỳ1.lsml" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
